--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="max_sound"><i class="fa fa-volume-up"></i></div>
           </div>
           
-          <audio src="/music/far_away.mp3" id="player_music" autoplay></audio>
-
+          <audio src="" id="player_music" autoplay></audio>
+                   
           <div class="controls">
             <button
               class="fas fa-random fa-2x random-button"
