--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="my_musicPlayer">
       <div class="left_box">
-        <div class="profile">
-          <img src="" alt="" />
+        <div class="profile" >
+          <img id="profile_img" src=" " alt="" />
         </div>
         <div class="info">
           <h3 id="music_name"></h3>
@@ -26,9 +26,9 @@
         
         <div class="function">
           <div class="stock">
-            <div class="start_music">00:00</div>
-            <input type="range" id="stock" value="0" />
             <div class="cur_music">00:00</div>
+            <input type="range" id="stock" value="0" />
+            <div class="total_music">00:00</div>
           </div>
           <div class="sound">
             <div class="min_sound"><i class="fa fa-volume-down"></i></div>
